[INFER] Always include rejoin points for GetProp stub calls in JSOP_LENGTH, bug 650658.